# liquiddesugar

./: .gitignore  liquiddesugar.cabal
src/Language/Haskell/Liquid/Desugar/: Check.hs  Coverage.hs  Desugar.hs  DsArrows.hs  DsBinds.hs  DsCCall.hs  DsExpr.hs  DsExpr.hs-boot  DsForeign.hs  DsGRHSs.hs  DsListComp.hs  DsMeta.hs  DsMeta.hs-boot  DsUtils.hs  HscMain.hs  Match.hs  Match.hs-boot  MatchCon.hs  MatchLit.hs
