Name:                liquiddesugar
Version:             7.10.0.0
Copyright:           2010-15 Ranjit Jhala, University of California, San Diego.
build-type:          Simple
Synopsis:            Haskell to GHC Core Desugarar for Liquid Haskell
Description:         Haskell to GHC Core Desugarar for Liquid Haskell.
Homepage:            http://goto.ucsd.edu/liquidhaskell
License:             BSD3
License-file:        LICENSE
Author:              Ranjit Jhala, Niki Vazou, Eric Seidel
Maintainer:          Ranjit Jhala <jhala@cs.ucsd.edu>
Category:            Language
Build-Type:          Simple
Cabal-version:       >=1.18

--Source-Repository head
--  Type:        git
--  Location:    https://github.com/ucsd-progsys/liquidhaskell/

Flag devel
  Description: turn on stricter error reporting for development
  Default:     False
  Manual:      True

Library
   Default-Language: Haskell98
   Build-Depends: base >= 4 && < 5
                , ghc >= 7.10.2 && < 7.11
                , array >= 0.5
                , time >= 1.4
                , directory >= 1.2
                , hpc >= 0.6
                , containers >= 0.5
                , template-haskell >= 2.9

   hs-source-dirs:  src

   Exposed-Modules:
                    Language.Haskell.Liquid.Desugar.HscMain,

                    -- NOTE: these need to be exposed so GHC generates .dyn_o files for them..
                    Language.Haskell.Liquid.Desugar.Check,
                    Language.Haskell.Liquid.Desugar.Coverage,
                    Language.Haskell.Liquid.Desugar.Desugar,
                    Language.Haskell.Liquid.Desugar.DsArrows,
                    Language.Haskell.Liquid.Desugar.DsBinds,
                    Language.Haskell.Liquid.Desugar.DsCCall,
                    Language.Haskell.Liquid.Desugar.DsExpr,
                    Language.Haskell.Liquid.Desugar.DsForeign,
                    Language.Haskell.Liquid.Desugar.DsGRHSs,
                    Language.Haskell.Liquid.Desugar.DsListComp,
                    Language.Haskell.Liquid.Desugar.DsMeta,
                    Language.Haskell.Liquid.Desugar.DsUtils,
                    Language.Haskell.Liquid.Desugar.Match,
                    Language.Haskell.Liquid.Desugar.MatchCon,
                    Language.Haskell.Liquid.Desugar.MatchLit

   ghc-options: -W -fwarn-missing-signatures
   if flag(devel)
     ghc-options: -Werror
   ghc-prof-options: -fprof-auto
   Default-Extensions: PatternGuards
